# FinanzRadar

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  readme.MD  requirements.txt
backend/: Dockerfile  main.py  main_fetch_tickers.py  main_update_database.py  pyproject.toml  test_comparison.py
backend/DEPRECATED_BACKEND_TRACER/: 00_finetune_yolo.py  01_vanilla_algorithm.py  02_yolo_algorithm.py  03_final_yolo_algoritm.py  04_user_input.py  info
backend/DEPRECATED_BACKEND_TRACER/finanzradar/: main_update_database.py  requirements.txt  test_comparison.py
backend/DEPRECATED_BACKEND_TRACER/finanzradar/parsers/: sec_processing.py  yahoo_processing.py
backend/DEPRECATED_BACKEND_TRACER/finanzradar/utils/: data_viz_preprocessing.py  date_utils.py  pandas_utils.py
backend/DEPRECATED_BACKEND_TRACER/finanzradar/utils/config/: config.py  logging.py
backend/DEPRECATED_BACKEND_TRACER/models/: object365.yaml
backend/featurestore/20_silver/form=10-K/ticker=AAPL/: c20575b5d5a148fc85a548171dac6632-0.parquet
backend/featurestore/20_silver/form=10-K/ticker=ADBE/: bd97748021454acc983a453fa05bf3a5-0.parquet
backend/featurestore/20_silver/form=10-K/ticker=AMZN/: bd97748021454acc983a453fa05bf3a5-0.parquet
backend/parsers/: sec.py  sec_processing.py  tickers_fetching.py  yahoo_processing.py
backend/utils/: config.py  data_viz_preprocessing.py  date_utils.py  math_utils.py  pandas_utils.py  sec_processing.py  yahoo_fundamentals.py
backend/utils/config/: config.py  fundamentals_config.json  logging.py
sec_cache/: t.py  (+1 more)
(+87 files in other folders)
